--- a/po-plug-ins/sr@Latn.po
+++ b/po-plug-ins/sr@Latn.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: gimp 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-01-10 04:01+0100\n"
-"PO-Revision-Date: 2004-01-10 04:02+0100\n"
+"PO-Revision-Date: 2004-01-10 04:23+0100\n"
 "Last-Translator: Branko Ivanović <popeye@one.ekof.bg.ac.yu>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@bogus.example.com>\n"
 "MIME-Version: 1.0\n"
@@ -497,11 +497,11 @@ msgstr "„%s“ je oštećena. Linija %d u sekciji Opcije je pogrešna"
 
 #: plug-ins/FractalExplorer/FractalExplorer.c:261
 msgid "<Image>/Filters/Render/_Fractal Explorer..."
-msgstr "<Slika>/Filteri/Render/Fractal Istraživač..."
+msgstr "<Slika>/Filteri/Iscrtavanje/Istraživač fraktala..."
 
 #: plug-ins/FractalExplorer/FractalExplorer.c:389
 msgid "Rendering Fractal..."
-msgstr "Renderujem fraktal..."
+msgstr "Iscrtavam fraktal..."
 
 #: plug-ins/FractalExplorer/FractalExplorer.c:763 plug-ins/gfig/gfig.c:3825
 #: plug-ins/gflare/gflare.c:3112
@@ -1803,7 +1803,7 @@ msgstr "Vrednost"
 #
 #: plug-ins/common/CML_explorer.c:460
 msgid "<Image>/Filters/Render/Pattern/CML _Explorer..."
-msgstr "<Slika>/Filteri/Renderiranje/Uzorak/CML Istraživač..."
+msgstr "<Slika>/Filteri/Iscrtavanje/Mustra/CML Istraživač..."
 
 #: plug-ins/common/CML_explorer.c:742
 msgid "CML_explorer: evoluting..."
@@ -2616,7 +2616,7 @@ msgstr "Upozorenje operacije datoteke za mešanje kanala"
 
 #: plug-ins/common/checkerboard.c:94
 msgid "<Image>/Filters/Render/Pattern/_Checkerboard..."
-msgstr "<Slika>/Filteri/Renderiranje/Uzorak/Šahovska tabla..."
+msgstr "<Slika>/Filteri/Iscrtavanje/Mustra/Šahovska tabla..."
 
 #: plug-ins/common/checkerboard.c:158
 msgid "Adding Checkerboard..."
@@ -3502,16 +3502,16 @@ msgstr "%s: nije valjana DICOM datoteka"
 #
 #: plug-ins/common/diffraction.c:184
 msgid "<Image>/Filters/Render/Pattern/_Diffraction Patterns..."
-msgstr "<Slika>/Filteri/Renderiranje/Uzorak/Difrakcija isečaka..."
+msgstr "<Slika>/Filteri/Iscrtavanje/Mustra/Difrakcija mustri..."
 
 #: plug-ins/common/diffraction.c:336
 msgid "Creating diffraction pattern..."
-msgstr "Kreiram difrakcionirani uzorak..."
+msgstr "Pravim difrakcioniranu mustru..."
 
 #
 #: plug-ins/common/diffraction.c:440
 msgid "Diffraction Patterns"
-msgstr "Difrakcionirani Uzorci"
+msgstr "Difrakcionirane mustre"
 
 #
 #: plug-ins/common/diffraction.c:531
@@ -3914,17 +3914,17 @@ msgstr "<Slika>/Filteri/Svetlosni efekti/Odsjaj..."
 #
 #: plug-ins/common/flarefx.c:263
 msgid "Render Flare..."
-msgstr "Flare renderiranje..."
+msgstr "Iscrtavanje odsjaja..."
 
 #: plug-ins/common/flarefx.c:300
 msgid "FlareFX"
-msgstr "FlareFX"
+msgstr "Efekti odsjaja"
 
 #
 #. to avoid side effects while initialization
 #: plug-ins/common/flarefx.c:726
 msgid "Center of FlareFX"
-msgstr "Sredina FlareFX"
+msgstr "Sredina efekata odsjaja"
 
 #
 #. show / hide cursor
@@ -4383,7 +4383,7 @@ msgstr "Visina delića:"
 #
 #: plug-ins/common/gqbist.c:438
 msgid "<Image>/Filters/Render/Pattern/_Qbist..."
-msgstr "<Slika>/Filteri/Renderiranje/Isečak/Kubist..."
+msgstr "<Slika>/Filteri/Iscrtavanje/Mustra/Kubist..."
 
 #
 #: plug-ins/common/gqbist.c:535
@@ -4415,7 +4415,7 @@ msgstr "Mapa preliva..."
 #
 #: plug-ins/common/grid.c:152
 msgid "<Image>/Filters/Render/Pattern/_Grid..."
-msgstr "<Slika>/Filteri/Renderovanje/Isečak/Mreža..."
+msgstr "<Slika>/Filteri/Iscrtavanje/Mustra/Mreža..."
 
 #: plug-ins/common/grid.c:239
 msgid "Drawing Grid..."
@@ -4792,15 +4792,15 @@ msgstr "IWarp"
 #
 #: plug-ins/common/jigsaw.c:408
 msgid "<Image>/Filters/Render/Pattern/_Jigsaw..."
-msgstr "<Slika>/Filteri/Renderiranje/Isečak/_Jigsaw..."
+msgstr "<Slika>/Filteri/Iscrtavanje/Mustra/_Slagalica..."
 
 #: plug-ins/common/jigsaw.c:462
 msgid "Assembling Jigsaw..."
-msgstr "Sastavljam _Jigsaw..."
+msgstr "Sastavljam _slagalicu..."
 
 #: plug-ins/common/jigsaw.c:2543
 msgid "Jigsaw"
-msgstr "Jigsaw"
+msgstr "Slagalica"
 
 #
 #: plug-ins/common/jigsaw.c:2567
@@ -4841,7 +4841,7 @@ msgstr "vrednost osvetljenja svakog delića ivice"
 
 #: plug-ins/common/jigsaw.c:2651
 msgid "Jigsaw Style"
-msgstr "_Jigsaw stil"
+msgstr "_Stil slagalice"
 
 #
 #: plug-ins/common/jigsaw.c:2655
@@ -5357,7 +5357,7 @@ msgstr "Tražim Krajeve.."
 #. Progress bar for rendering tiles
 #: plug-ins/common/mosaic.c:482
 msgid "Rendering Tiles..."
-msgstr "Renderiram Djeliće..."
+msgstr "Iscrtavam deliće..."
 
 #: plug-ins/common/mosaic.c:508
 msgid "Mosaic"
@@ -5646,7 +5646,7 @@ msgstr "<Slika>/Filteri/Svetlosni Efekti/SuperNova..."
 #
 #: plug-ins/common/nova.c:277
 msgid "Rendering SuperNova..."
-msgstr "Renderiram SuperNovu.."
+msgstr "Iscrtavam SuperNovu.."
 
 #: plug-ins/common/nova.c:318
 msgid "SuperNova"
@@ -5799,7 +5799,7 @@ msgstr "<Slika>/Filteri/Mapa/Delići papira..."
 #
 #: plug-ins/common/pat.c:447
 msgid "Save as Pattern"
-msgstr "Spremi kao Uzorak"
+msgstr "Sačuvaj kao mustru"
 
 #: plug-ins/common/pcx.c:312
 #, c-format
@@ -5849,7 +5849,7 @@ msgstr "Visina piksela:"
 #
 #: plug-ins/common/plasma.c:182
 msgid "<Image>/Filters/Render/Clouds/_Plasma..."
-msgstr "<Slika>/Filteri/Renderovanje/Oblaci/Plazma..."
+msgstr "<Slika>/Filteri/Iscrtavanje/Oblaci/Plazma..."
 
 #: plug-ins/common/plasma.c:261
 msgid "Plasma..."
@@ -6207,7 +6207,7 @@ msgstr "Učitaj Postscript"
 #. Rendering
 #: plug-ins/common/ps.c:2644
 msgid "Rendering"
-msgstr "Renderiram"
+msgstr "Iscrtavam"
 
 #. Resolution
 #: plug-ins/common/ps.c:2661 plug-ins/common/svg.c:816
@@ -6723,11 +6723,11 @@ msgstr "Vrednost Pomaka:"
 #
 #: plug-ins/common/sinus.c:196
 msgid "<Image>/Filters/Render/Pattern/_Sinus..."
-msgstr "<Slika>/Filteri/Renderiranje/Isečak/Sinus..."
+msgstr "<Slika>/Filteri/Iscrtavanje/Mustra/Sinus..."
 
 #: plug-ins/common/sinus.c:281
 msgid "Sinus: rendering..."
-msgstr "Sinus: renderiranje..."
+msgstr "Sinus: iscrtavam..."
 
 #
 #. Create Main window with a vbox
@@ -6873,7 +6873,7 @@ msgstr "Izvodim uglađenu paletu..."
 #
 #: plug-ins/common/smooth_palette.c:408
 msgid "Smooth Palette"
-msgstr "Uglađena Paleta"
+msgstr "Uglađena paleta"
 
 #
 #: plug-ins/common/smooth_palette.c:445
@@ -6883,17 +6883,17 @@ msgstr "Dubina traženja:"
 #
 #: plug-ins/common/snoise.c:171
 msgid "<Image>/Filters/Render/Clouds/_Solid Noise..."
-msgstr "<Slika>/Filteri/Renderovanje/Oblaci/Jaki Šum..."
+msgstr "<Slika>/Filteri/Iscrtavanje/Oblaci/Jaki Šum..."
 
 #: plug-ins/common/snoise.c:297
 msgid "Solid Noise..."
-msgstr "Jaki Šum..."
+msgstr "Jaki šum..."
 
 #
 #. Dialog initialization
 #: plug-ins/common/snoise.c:495
 msgid "Solid Noise"
-msgstr "Jaki Šum"
+msgstr "Jaki šum"
 
 #
 #: plug-ins/common/snoise.c:529
@@ -7223,11 +7223,11 @@ msgstr "Izvezi:"
 #
 #: plug-ins/common/spheredesigner.c:3066
 msgid "Rendering Sphere..."
-msgstr "Renderiram loptu.."
+msgstr "Iscrtavam loptu.."
 
 #: plug-ins/common/spheredesigner.c:3123
 msgid "<Image>/Filters/Render/Sphere _Designer..."
-msgstr "<Slika>/Filteri/Renderiranje/Dizajner lopte..."
+msgstr "<Slika>/Filteri/Iscrtavanje/Dizajner lopte..."
 
 #: plug-ins/common/spread.c:107
 msgid "<Image>/Filters/Noise/Sp_read..."
@@ -7338,11 +7338,11 @@ msgstr "Nepoznat razlog"
 
 #: plug-ins/common/svg.c:246
 msgid "Rendering SVG..."
-msgstr "Renderujem SVG..."
+msgstr "Iscrtavam SVG..."
 
 #: plug-ins/common/svg.c:256
 msgid "Rendered SVG"
-msgstr "Renderovan SVG"
+msgstr "Iscrtan SVG"
 
 #: plug-ins/common/svg.c:421
 msgid ""
@@ -7364,7 +7364,7 @@ msgstr "Otvori SVG"
 #. Scalable Vector Graphics is SVG, should perhaps not be translated
 #: plug-ins/common/svg.c:642
 msgid "Render Scalable Vector Graphics"
-msgstr "Redneruj Scalable Vector Graphics (SVG)"
+msgstr "Iscrtaj skalabilnu vektorsku grafiku (SVG)"
 
 #: plug-ins/common/svg.c:701 plug-ins/print/gimp_main_window.c:1025
 #: plug-ins/print/gimp_main_window.c:1237
@@ -7797,7 +7797,7 @@ msgstr "Video"
 #. frame for the radio buttons
 #: plug-ins/common/video.c:2160
 msgid "RGB Pattern Type"
-msgstr "Vrsta RGB isečaka"
+msgstr "Vrsta RGB mustre"
 
 #: plug-ins/common/video.c:2170
 msgid "_Additive"
@@ -8144,11 +8144,11 @@ msgstr "<Slika>/Filteri/Distorzije/Vetar..."
 
 #: plug-ins/common/wind.c:322
 msgid "Rendering Blast..."
-msgstr "Renderiram eksploziju..."
+msgstr "Iscrtavam eksploziju..."
 
 #: plug-ins/common/wind.c:441
 msgid "Rendering Wind..."
-msgstr "Renderiram Vetar..."
+msgstr "Iscrtavam vetar..."
 
 #: plug-ins/common/wind.c:872
 msgid "Wind"
@@ -8268,12 +8268,12 @@ msgstr "Učitaj Windows metadatoteku"
 #: plug-ins/common/wmf.c:212
 #, c-format
 msgid "Rendering %s"
-msgstr "Renderujem %s"
+msgstr "Iscrtavam %s"
 
 #
 #: plug-ins/common/wmf.c:236
 msgid "Scale (log 2):"
-msgstr "Lestvica (log 2):"
+msgstr "Razmera (log 2):"
 
 #: plug-ins/common/wmf.c:396
 #, c-format
@@ -8282,7 +8282,7 @@ msgstr "Ne mogu otvoriti „%s“ za čitanje."
 
 #: plug-ins/common/wmf.c:415
 msgid "Rendered WMF"
-msgstr "Rednderujem WMF"
+msgstr "Iscrtavam WMF"
 
 #: plug-ins/common/xbm.c:240
 msgid "Created with The GIMP"
@@ -8574,7 +8574,7 @@ msgstr "Komponiranje Slike"
 
 #: plug-ins/flame/flame.c:139
 msgid "<Image>/Filters/Render/Nature/_Flame..."
-msgstr "<Slika>/Filteri/Renderovanje/Priroda/Plamen..."
+msgstr "<Slika>/Filteri/Iscrtavanje/Priroda/Plamen..."
 
 #: plug-ins/flame/flame.c:226
 msgid "Drawing Flame..."
@@ -8652,7 +8652,7 @@ msgstr "Plamen"
 
 #: plug-ins/flame/flame.c:981
 msgid "_Rendering"
-msgstr "Renderujem"
+msgstr "I_scrtavam"
 
 #: plug-ins/flame/flame.c:1007
 msgid "Co_ntrast:"
@@ -8861,7 +8861,7 @@ msgstr "Veličina pregleda"
 
 #: plug-ins/gfig/gfig.c:347
 msgid "<Image>/Filters/Render/_Gfig..."
-msgstr "<Slika>/Filteri/Renderovanje/_Gfig..."
+msgstr "<Slika>/Filteri/Iscrtavanje/_Gfig..."
 
 #: plug-ins/gfig/gfig.c:623
 msgid "First Gfig"
@@ -8967,17 +8967,14 @@ msgstr "Olovka"
 
 #: plug-ins/gfig/gfig.c:1684 plug-ins/gfig/gfig.c:2442
 msgid "Pattern"
-msgstr "Isečak"
+msgstr "Mustra"
 
 #: plug-ins/gfig/gfig.c:1691
 msgid ""
 "Use the brush/pencil or the airbrush when drawing on the image. Pattern "
 "paints with currently selected brush with a pattern. Only applies to circles/"
 "ellipses if Approx. Circles/Ellipses toggle is set."
-msgstr ""
-"Koristite četku/olovku ili sprej kada crtate na slici. Isečak slika trenutno "
-"odabranom četkom sa isečkom. Samo se primenjuje na krugove/elipse ako je "
-"Pros. Krugovi/Elipse menjanje uključeno."
+msgstr "Koristite četku/olovku ili sprej kada crtate na slici. Mustra slika trenutno odabranom četkom pomoću mustre. Samo se primenjuje na krugove/elipse ako je Pros. Krugovi/Elipse menjanje uključeno."
 
 #: plug-ins/gfig/gfig.c:2038 plug-ins/rcm/rcm_dialog.c:129
 msgid "Original"
@@ -10391,7 +10388,7 @@ msgstr ""
 #
 #: plug-ins/ifscompose/ifscompose.c:371
 msgid "<Image>/Filters/Render/Nature/Ifs_Compose..."
-msgstr "<Slika>/Filteri/Renderovanje/Priroda/Ifs_Sastavljanje..."
+msgstr "<Slika>/Filteri/Iscrtavanje/Priroda/Ifs_Sastavljanje..."
 
 #
 #. Asym
@@ -10476,7 +10473,7 @@ msgstr "Razvlačenje"
 #
 #: plug-ins/ifscompose/ifscompose.c:919
 msgid "Render Options"
-msgstr "Mogućnosti Renderiranja"
+msgstr "Mogućnosti iscrtavanja"
 
 #: plug-ins/ifscompose/ifscompose.c:933 plug-ins/print/gimp_main_window.c:482
 msgid "Auto"
@@ -10527,7 +10524,7 @@ msgstr "Poluprečnik spota:"
 #: plug-ins/ifscompose/ifscompose.c:1389
 #, c-format
 msgid "Rendering IFS (%d/%d)..."
-msgstr "Renderujem IFS (%d/%d)..."
+msgstr "Iscrtavam IFS (%d/%d)..."
 
 #. transfer the image to the drawable
 #: plug-ins/ifscompose/ifscompose.c:1408
@@ -11353,7 +11350,7 @@ msgstr "Crta lavirint."
 
 #: plug-ins/maze/maze.c:167
 msgid "<Image>/Filters/Render/Pattern/_Maze..."
-msgstr "<Slika>/Filteri/Renderovanje/Odsečak/Lavirint..."
+msgstr "<Slika>/Filteri/Iscrtavanje/Mustra/Lavirint..."
 
 #: plug-ins/maze/maze.c:446
 msgid "Drawing Maze..."
