--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-10  Sven Neumann  <sven@gimp.org>
+
+	* app/display/gimpdisplayshell-scale.c
+	(gimp_display_shell_scale_zoom_fraction): use G_SQRT2 instead of
+	the golden ratio (see bug #124073).
+
 2004-01-10  Michael Natterer  <mitch@gimp.org>
 
 	* app/gui/layers-commands.c (layers_alpha_to_selection_cmd_callback):
