--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-10  Ville Pätsi  <drc@gimp.org>
+
+	* gimp.spec.in: Changed epoch to 2.
+
 2004-01-10  Sven Neumann  <sven@gimp.org>
 
 	* app/display/gimpdisplayshell-scale.c
